<resources>
    <string name="app_name">SMD-Assignment-1</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="email">Email id</string>
    <string name="pass1">Password</string>
    <string name="pass2">Retype Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signup">SIGNUP</string>
    <string name="exit">EXIT</string>
    <string name="screen2Title">GUI Demo 21L-7607</string>
    <string name="tab1">ONE</string>
    <string name="tab2">TWO</string>
    <string name="username">username</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="edit_prof">Edit profile</string>
    <string name="your_name">Your Name</string>
    <string name="bio_1">Your bio goes here…</string>
    <string name="bio_2">and here too.</string>
    <string name="website">yoursite.com</string>
    <string name="back">Back Button</string>
    <string name="title_activity_main2">Activity 2</string>
</resources>