<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/radioFill">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back_black_24dp"
            android:contentDescription="@string/back"
            android:padding="@dimen/default_padding"
            android:background="@null"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/screen2Title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/radioFill"
        android:padding="8dp"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/tab1"
            android:drawableStart="@drawable/credit_card_icon"
            android:drawablePadding="8dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:layout_marginHorizontal="@dimen/default_padding"
            >
        </View>
        <TextView
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/tab2"
            android:drawableStart="@drawable/language_icon"
            android:drawablePadding="8dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            />
    </LinearLayout>
</LinearLayout>